#  Copyright Synge Todo 2010.
#  Distributed under the Boost Software License, Version 1.0.
#      (See accompanying file LICENSE_1_0.txt or copy at
#          http://www.boost.org/LICENSE_1_0.txt)

add_subdirectory(single)
add_subdirectory(multiple)
add_subdirectory(loop)
add_subdirectory(exchange)
add_subdirectory(wanglandau)
